# Excel-Data-Transformer

./: .gitignore  USER_GUIDE.md  USER_GUIDE_PROMPTS.md  check_ollama.py  final_script.md  final_script.py  h origin main --force  pyproject.toml  requirements.txt  test_file_access.py  test_gemini.py  test_gemini_2.py  test_upload.py
backend/: final_script.py  main.py
backend/crewai_app/: agents.yaml  crew.py  crewmain.py  custom_tool.py  tasks.yaml
backend/crewai_app/config/: agents.yaml  tasks.yaml
frontend/: app.py
