[project]
name = "csv_organiser"
version = "0.1.0"
description = "csv-organiser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
csv_organiser = "csv_organiser.main:run"
run_crew = "csv_organiser.main:run"
train = "csv_organiser.main:train"
replay = "csv_organiser.main:replay"
test = "csv_organiser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
